# libspotify-plusplus

./: .gitignore  CMakeLists.txt  README  README.md
Include/Spotify/: Album.h  AlbumBrowse.h  Artist.h  Disc.h  Image.h  PlayList.h  PlayListElement.h  PlayListFolder.h  Session.h  Track.h
Include/Spotify/Core/: Mutex.h
Source/Spotify/: Album.cpp  AlbumBrowse.cpp  ArtistBrowse.cpp  Disc.cpp  PlayList.cpp  PlayListContainer.cpp  PlayListElement.cpp  Session.cpp  Track.cpp
cmake/: FindLog4cplus.cmake  Findlibspotify.cmake
libspotify-plusplus.xcodeproj/: project.pbxproj
src/: CMakeLists.txt
src/Spotify/: Album.h  ArtistBrowse.h  PlayList.cpp  Session.cpp  Track.cpp
src/spotify/: Album.cpp  Album.hpp  AlbumBrowse.cpp  AlbumBrowse.hpp  Artist.cpp  Artist.hpp  ArtistBrowse.cpp  ArtistBrowse.hpp  Disc.cpp  Disc.hpp  Image.cpp  Image.hpp  LibConfig.hpp  PlayList.cpp  PlayList.hpp  PlayListContainer.cpp  PlayListContainer.h  PlayListContainer.hpp  PlayListElement.cpp  PlayListElement.hpp  PlayListFolder.cpp  PlayListFolder.hpp  Session.cpp  Session.hpp  Track.cpp  Track.hpp
src/spotify/Core/: Mutex.cpp  Mutex.hpp
src/spotify/Debug/: Debug.cpp  Debug.hpp
src/spotify/core/: Mutex.cpp  Mutex.hpp
src/spotify/debug/: Debug.cpp
tests/: CMakeLists.txt  SessionTests.cpp  appkeys.cpp.TEMPLATE
tools/: cpplint.py
