PROJECT(libspotifypp CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BIN_OUTPUT_DIR ${libspotifypp_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${libspotifypp_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

ADD_SUBDIRECTORY(src)
