CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libspotifypp CXX)


# set output to the given folders
SET(BIN_OUTPUT_DIR ${libspotifypp_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${libspotifypp_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

# add aditional modules to the search path
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

IF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS) # does not prompt warnings for printf, memcpy, etc
    ADD_DEFINITIONS(-D_WIN32_WINDOWS=_WIN32_WINNT_WIN7)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

MESSAGE(STATUS ${sources})

ENABLE_TESTING(TRUE)

ADD_TEST(SpotifyppTests ${BIN_OUTPUT_DIR}/SpotifyppTests)

FIND_PACKAGE(PythonInterp 2.7)
IF(PYTHONINTERP_FOUND)
    ADD_TEST(TestStyle  "${PYTHON_EXECUTABLE}" "${CMAKE_SOURCE_DIR}/tools/cpplint.py" "${CMAKE_SOURCE_DIR}/src")
ENDIF()
